<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MyActivity">


    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_on_off"
        android:id="@+id/alarmToggle"
        android:onClick="onToggleClicked"
        android:layout_above="@+id/btnStop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="209dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/alarmText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/alarmToggle" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/alarmToggle" />

    <Button
        android:id="@+id/btnOpenAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_alarm"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/alarmToggle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:text="@string/timeSelected"
        android:textSize="36sp" />

</RelativeLayout>
