...
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
...
                    android:layout_height="120dp"
                    android:layout_below="@+id/tvDate"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="23dp">

                    <Button
                        android:id="@+id/btnSetDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        adnroid:layout_centerInParent ="true"
                        android:background="@drawable/set_date"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1" />
...
