<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/chart_activity"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="32dp"
    tools:context="com.example.zozo07.mobile.ChartActivity">
...
        android:id="@+id/bargraph">
    </com.github.mikephil.charting.charts.BarChart>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginStart="48dp"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/bargraph"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/weekDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekdays" />

        <RadioButton
...
